--- a/src/App.scss
+++ b/src/App.scss
@@ -1,30 +1,7 @@
-p.copy-text {
-	cursor: pointer;
-	display: inline-block;
-	position: relative;
-	padding-bottom: 2px;
-	transition: all 0.25s ease;
-	text-decoration: none;
-	color: black;
-
-	&::after {
-		content: '';
-		position: absolute;
-		height: 1px;
-		left: 50%;
-		right: 50%;
-		bottom: 0;
-		background-color: black;
-		transition: all 0.25s ease;
-	}
-
-	&:hover::after {
-		left: 0;
-		right: 0;
-	}
-}
-
 .buttons {
+	position: fixed;
+	top: 25px;
+	right: 25px;
 	display: flex;
 	align-items: center;
 	padding: 0 10px 0 0;
@@ -34,25 +11,14 @@ p.copy-text {
 		align-items: center;
 		width: fit-content;
 		height: fit-content;
-		padding: 0 5px;
+		margin: 5px;
+		padding: 15px;
+		border-radius: 5px;
+		border: 1px solid rgb(150, 150, 150);
+		background-color: white;
 
-		img {
-			width: 15px;
-			transition: 0.05s;
-		}
-
-		&:hover img {
-			filter: contrast(10%);
-			transition: 0.05s;
-		}
-
-		&.button-search,
-		&.button-home {
-			padding: 0 15px;
-
-			img {
-				width: 20px;
-			}
+		&:hover {
+			filter: invert(10%);
 		}
 	}
 }
