--- a/src/App.scss
+++ b/src/App.scss
@@ -1,24 +1,15 @@
-.buttons {
-	position: fixed;
-	top: 25px;
-	right: 25px;
-	display: flex;
-	align-items: center;
-	padding: 0 10px 0 0;
+input {
+	padding: 15px;
+}
 
-	.button {
-		display: flex;
-		align-items: center;
-		width: fit-content;
-		height: fit-content;
-		margin: 5px;
-		padding: 15px;
-		border-radius: 5px;
-		border: 1px solid rgb(150, 150, 150);
-		background-color: white;
+.button {
+	margin: 5px;
+	padding: 15px;
+	border-radius: 5px;
+	border: 1px solid rgb(150, 150, 150);
+	background-color: white;
 
-		&:hover {
-			filter: invert(10%);
-		}
+	&:hover {
+		filter: invert(10%);
 	}
 }
