--- a/src/App.scss
+++ b/src/App.scss
@@ -1,15 +1,20 @@
-input {
-	padding: 15px;
-}
+.add-sort {
+	display: flex;
+	flex-direction: row;
 
-.button {
-	margin: 5px;
-	padding: 15px;
-	border-radius: 5px;
-	border: 1px solid rgb(150, 150, 150);
-	background-color: white;
+	input {
+		padding: 15px;
+	}
 
-	&:hover {
-		filter: invert(10%);
+	.button {
+		margin: 5px;
+		padding: 15px;
+		border-radius: 5px;
+		border: 1px solid rgb(150, 150, 150);
+		background-color: white;
+
+		&:hover {
+			filter: invert(10%);
+		}
 	}
 }
