--- a/src/App.scss
+++ b/src/App.scss
@@ -1,20 +1,37 @@
-.add-sort {
-	display: flex;
-	flex-direction: row;
+.box {
+	font-size: 1rem;
+	font-family: Arial, Helvetica, sans-serif;
 
-	input {
-		padding: 15px;
+	.add-sort {
+		display: flex;
+		flex-direction: row;
+
+		input {
+			padding: 15px;
+		}
+
+		.button {
+			margin: 5px;
+			padding: 15px;
+			border-radius: 5px;
+			border: 1px solid rgb(150, 150, 150);
+			background-color: white;
+
+			&:hover {
+				filter: invert(10%);
+			}
+		}
 	}
 
-	.button {
-		margin: 5px;
-		padding: 15px;
-		border-radius: 5px;
-		border: 1px solid rgb(150, 150, 150);
-		background-color: white;
+	.list {
+		.data {
+			font-weight: bold;
+		}
 
-		&:hover {
-			filter: invert(10%);
+		li p {
+			margin: 0;
+			padding: 5px 10px;
+			border-left: 1px solid gray;
 		}
 	}
 }
